<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Clubber Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">FooBar</string>
    <string name="app_descrip">Clubber, your best teamate once the game is over.</string>
    <string name="app_credits">"First attempt of Android application by Olivier Mahieu and "
        "Xavier Santolaria.\n\nWebsite: http://www.xsom.com/Clubber/"</string>

    <string name="preferences_title">Settings</string>
    <string name="pref_startup_tab_default_value">orders</string>
    
    <string name="tab_clubs_text">Clubs</string>
    <string name="tab_orders_text">Bar Orders</string>
    <string name="tab_stats_text">Statistics</string>
    
    <string name="button_order_text">Finalize Order</string>
    
    <string name="label_best_scorer">Best scorer</string>
    <string name="label_best_assist">Best assist</string>
    <string name="label_best_floche">Best floche</string>

    <string name="value_best_scorer">Xavier Santolaria</string>
    <string name="value_best_scorer_count">4</string>
    
    <string name="value_best_assist">Renaud Mansy</string>
    <string name="value_best_assist_count">3</string>
    
    <string name="value_best_floche">Serge Magdalijns</string>
    <string name="value_best_floche_count">3</string>
    
    <string name="separator">:</string>
    
</resources>